--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
-  color: #2e2f42;
+  color: #434455;
+  background-color: #fff;
 }
 
 /* #region header */
@@ -12,7 +13,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
@@ -37,6 +38,7 @@ body {
   color: #404bbf;
 }
 .address {
+  font-style: normal;
 }
 .address-menu {
 }
@@ -118,7 +120,11 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
+}
+.menu-team {
+  background-color: #fff;
 }
 .title-name {
   font-weight: 500;
@@ -145,6 +151,7 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
 }
 .title-project {
