--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,13 @@ body {
   background-color: #fff;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
 /* #region header */
 .header {
 }
